--- a/UBus-react/package.json
+++ b/UBus-react/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.0.23",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
