--- a/UBus-react/package.json
+++ b/UBus-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://pedrinho-dev01.github.io/UBus/",
+  "homepage": "https://pedrinho-dev01.github.io/UBus/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
